--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     font-family: sans-serif;
     height: 100%;
 }
- 
+
 main{
     align-items: center;
     justify-content: center;
@@ -28,6 +28,12 @@ main{
 h1{
     text-align: center;
     margin-bottom: 10px;
+}
+
+button :hover{
+    cursor: pointer;
+    background-color: #313335;
+
 }
  
 table{
@@ -45,3 +51,86 @@ table td, th{
     border: 1px solid black;
     padding: 10px;
 }
+
+.container-form-nota{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #FFFFFF99;
+
+}
+
+  button {
+    height: fit-content;
+    height: 32px;
+    background-color: transparent;
+  
+    border: 1px solid darkgray;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: 14px;
+  
+    cursor: pointer;
+  }
+  
+  button:hover{
+    box-shadow: 0px 2px 10px black;
+  }
+
+  
+  .input-group{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .input-group label{
+    margin-bottom: 2px;
+    font-size: 14px;
+  }
+  
+  .input-group input {
+    padding: 6px 8px;
+    min-width: 300px;
+  
+    font-size: 16px;
+    border: 1px solid darkgrey;
+    border-radius: 4px;
+  }
+  
+  
+  .search-form{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    margin-bottom: 10px;
+  
+    align-items: flex-end;
+  }
+  
+  .modal-form{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0009;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #form-funcionario{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 4px;
+    gap: 5px;
+    
+    background-color: darkgray;
+    box-shadow: 0px 0px 20px #000;
+  }
