--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
- 
-body{
+
+body {
     background-color: rgb(187, 238, 235);
     color: rgb(17, 17, 16);
     display: flex;
@@ -12,9 +12,19 @@ body{
     justify-content: center;
     font-family: sans-serif;
     height: 100%;
+    margin: 0;
 }
 
-main{
+.content {
+    min-width: 90%;
+    margin: 30px;
+    padding: 30px;
+    background-color: #FFF;
+    border-radius: 6px;
+    box-shadow: 0px 0px 20px #777;
+}
+
+main {
     align-items: center;
     justify-content: center;
     max-width: 100%;
@@ -24,113 +34,144 @@ main{
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgb(127, 178, 255);
 }
- 
-h1{
+
+h1 {
+    font-size: 40px;
     text-align: center;
     margin-bottom: 10px;
+    margin: 10px;
+    color: rgb(43, 63, 63);
 }
 
-button :hover{
-    cursor: pointer;
-    background-color: #313335;
-
+.text-align {
+    color: white;
+    margin: 15px;
 }
- 
-table{
+
+.material-icons {
+    color: rgb(0, 0, 0);
+}
+
+table {
     width: 100%;
     text-align: left;
     border: 1px solid black;
     border-collapse: collapse;
 }
- 
-table th{
-    background-color: snow;
-}
- 
-table td, th{
-    border: 1px solid black;
-    padding: 10px;
+
+table th {
+    background-color: rgb(64, 88, 88);
 }
 
-.container-form-nota{
+table td,
+th {
+    border: 1px solid black;
+    padding: 5px 10px;
+}
+
+table td,
+th,
+tr p {
+    color: white;
+}
+
+.container-form-nota {
     position: absolute;
     width: 100vw;
     height: 100vh;
     display: none;
     align-items: center;
     justify-content: center;
-
     background-color: #FFFFFF99;
-
 }
 
-  button {
+button {
     height: fit-content;
-    height: 32px;
-    background-color: transparent;
-  
-    border: 1px solid darkgray;
-    border-radius: 6px;
+    height: 35px;
+    border: 2px solid rgb(68, 68, 68);
+    border-radius: 5px;
     font-weight: bold;
     font-size: 14px;
-  
     cursor: pointer;
-  }
-  
-  button:hover{
-    box-shadow: 0px 2px 10px black;
-  }
+}
 
-  
-  .input-group{
+button:hover {
+    box-shadow: 0px 2px 10px black;
+    cursor: pointer;
+}
+
+.input-group {
     display: flex;
     flex-direction: column;
-  }
-  
-  .input-group label{
+}
+
+.input-group label {
     margin-bottom: 2px;
     font-size: 14px;
-  }
-  
-  .input-group input {
+}
+
+.input-group input {
     padding: 6px 8px;
     min-width: 300px;
-  
     font-size: 16px;
     border: 1px solid darkgrey;
     border-radius: 4px;
-  }
-  
-  
-  .search-form{
+}
+
+.search-form {
     display: flex;
     flex-direction: row;
     gap: 5px;
     margin-bottom: 10px;
-  
     align-items: flex-end;
-  }
-  
-  .modal-form{
+}
+
+.modal-form {
     position: absolute;
     width: 100vw;
     height: 100vh;
     background-color: #0009;
     top: 0;
     left: 0;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
-  }
-  
-  #form-funcionario{
+}
+
+#form-funcionario {
     width: 50%;
     display: flex;
     flex-direction: column;
     padding: 10px;
     border-radius: 4px;
     gap: 5px;
-    
     background-color: darkgray;
     box-shadow: 0px 0px 20px #000;
-  }
+}
+
+#buttonAdcFuncionario {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-top: 100px;
+    background-color: black;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    transition: all 0.2s ease-in-out;
+}
+
+#buttonAdcFuncionario:hover {
+    transform: scale(1.1);
+    background-color: #424242;
+}
+
+#buttonAdcFuncionario p {
+    font-size: 32px;
+    color: white;
+}
